examples/ingress-wilcard-certificate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
    kubernetes.io/ingress.class: traefik
  name: nginx-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - test.atenea.lat
      secretName: tls-test-atenea-lat
  rules:
  - host: test.atenea.lat
    http:
      paths:
      - backend:
          service:
            name: nginx-demo
            port:
              number: 80
        path: /
        pathType: Prefix
